# STM32-FIRMWARE-BOOTLOADER

./: .clangd  .mxproject  BOOTLOADER-PADDER-TOOL.py  CMakeLists.txt  CMakePresets.json  ECDSA_SECP256R1_SOFTWARE_REFERENCE.ipynb  FW-Image-Padder.py  FW-UPLOAD-TEST.py  README.md  STM32-BOOTLOADER-WITH-CRYPTO.ioc  STM32L053R8-FIRMWARE-BOOTLOADER.ioc  STM32L053XX_FLASH.ld  firmware_padder.py  startup_stm32l053xx.s  test.txt
Application/: APPLICATION_STM32L053XX_FLASH.ld
Application/Core/Src/: main.c  stm32l0xx_it.c
Bootloader/: BOOTLOADER_STM32L053XX_FLASH.ld
Bootloader/Core/Inc/: main.h
Bootloader/Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Core/Inc/: crc8.h  crypto.h  main.h  ring-buffer.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  transport-layer.h
Core/Src/: cmox-low-level.c  crc8.c  crypto.c  main.c  ring-buffer.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  transport-layer.c
Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal.c
STM32CubeExpansion_Crypto_V4.6.0/: Package_license.html  Release_Notes.html  sbom_cdx.json
STM32CubeExpansion_Crypto_V4.6.0/Drivers/CMSIS/: ARM.CMSIS.pdsc  st_readme.txt
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32G0xx_HAL_Driver/: Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32G4xx_HAL_Driver/: README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32H5xx_HAL_Driver/: README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32H7RSxx_HAL_Driver/: LICENSE.md  README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32H7xx_HAL_Driver/: README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32L0xx_HAL_Driver/: README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Drivers/STM32L1xx_HAL_Driver/: README.md  Release_Notes.html
STM32CubeExpansion_Crypto_V4.6.0/Projects/: Release_Notes.html  STM32CubeProjectsList.html
Shared/Inc/: ring-buffer.h  system.h  timer.h  transport-layer.h  uart.h
Shared/Src/: crc8.c  system.c  timer.c  transport-layer.c  uart.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
(+9515 files in other folders)
